# wass-rust

./: Cargo.toml  README.md  index.html  readme.md
pkg/: package.json  wass_rust.js  wass_rust_bg.wasm
src/: lib.rs
