[package]
name = "wass-rust"
version = "0.1.0"
edition = "2018"
authors = ["Cassidy"]
description = "wasm-pack rust sample"
license = "MIT/Apache-2.0"
repository = "https://github.com/casmacdo/wass-rust"

[lib]
crate-type = ["cdylib"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = "0.2"